--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@types/react": "^18.0.26",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "get-google-fonts": "^1.2.2",
