--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "eslint-config-next": "13.1.1",
     "get-google-fonts": "^1.2.2",
     "init": "^0.1.2",
+    "js-cookie": "^3.0.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
