--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "get-google-fonts": "^1.2.2",
+    "heroicons": "^2.0.13",
     "init": "^0.1.2",
     "js-cookie": "^3.0.1",
     "next": "13.1.1",
