--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@types/react": "^18.0.26",
+    "@types/react-select": "^5.0.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "get-google-fonts": "^1.2.2",
@@ -19,7 +20,11 @@
     "js-cookie": "^3.0.1",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
+    "react-phone-number-input": "^3.2.13",
+    "react-select": "^5.7.0",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
