--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@next/font": "13.1.1",
     "@types/react": "^18.0.26",
     "@types/react-select": "^5.0.1",
+    "axios": "^1.2.2",
+    "emailjs": "^4.0.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "get-google-fonts": "^1.2.2",
@@ -22,6 +24,7 @@
     "react": "18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.3",
     "react-phone-number-input": "^3.2.13",
     "react-select": "^5.7.0",
     "react-select-country-list": "^2.2.3",
