--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.26",
     "@types/react-select": "^5.0.1",
     "axios": "^1.2.2",
+    "bcryptjs": "^2.4.3",
     "emailjs": "^4.0.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
@@ -20,6 +21,7 @@
     "heroicons": "^2.0.13",
     "init": "^0.1.2",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.8.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-country-region-selector": "^3.6.1",
