--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.8.2",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "18.2.0",
